--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
+
+
 .App {
+  height: 100%;
   text-align: center;
+  display: grid;
+  grid-template-areas:
+  "n"
+  "m"
+  "f";
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+.main {
+  grid-area: m;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.footer {
+  grid-area: f;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+nav {
+  grid-area: n;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
