--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@ a {
   align-content: center;
   height: 725px;
   position: relative;
+  background-image: linear-gradient(to bottom, #808285, #808285);
   
 
 }
@@ -141,15 +142,36 @@ form {
   height: 100px;
 }
 
-.delete-song-button {
-  margin-left: 10px;
-  align-self: right;
-  justify-self: right;
+.list-button {
+  border: 2px solid #E81D22;
+}
+
+.add-button {
+  border: 2px solid #E81D22;
+}
+
+.delete-button {
+  border: 2px solid #E81D22;
 }
 
 button {
   background-color: #EFF2EF;
   border-radius: 12px;
+  /* border: 2px solid #E81D22; */
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  background-image: linear-gradient(to bottom, #EFF2EF, #808285);
+}
+
+button:hover {
+  background-image: linear-gradient(to bottom, #EFF2EF, #505153);
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.delete-song-button {
+  margin-left: 10px;
+  align-self: right;
+  justify-self: right;
+  background-image: linear-gradient(to bottom, #EFF2EF, #E81D22);
 }
 
 /* width */
