--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ a {
   align-content: center;
   height: 725px;
   position: relative;
-  background-image: linear-gradient(to bottom, #808285, #808285);
+  background-image: linear-gradient(to bottom, #808285, #3C3D3E);
   
 
 }
@@ -181,8 +181,8 @@ button:hover {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px #808285;
-  
+  /* box-shadow: inset 0 0 5px ##464749; */
+  /* background-image: linear-gradient(to bottom, #EFF2EF, #E81D22); */
   border-radius: 10px;
 }
 
@@ -195,5 +195,5 @@ button:hover {
 }
 
 ::-webkit-scrollbar-corner {
-  background-color: #808285;
+  background-color: #464749;
 }
