--- a/src/App.css
+++ b/src/App.css
@@ -207,6 +207,10 @@ button:hover {
   background-color: #464749;
 }
 
+.show-container {
+  overflow: scroll;
+}
+
 @media only screen and (max-width: 600px) {
   nav {
     display: grid;
@@ -253,5 +257,24 @@ button:hover {
    align-self: center;
   }
 
-  
 }
+
+@media only screen and ( min-width: 750px ) {
+ 
+
+  .two-collumn {
+    overflow: visible;
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+         column-count: 2;
+  }
+
+ .three-collumn {
+  overflow: visible;
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+       column-count: 3;
+ }
+
+}
+
