--- a/src/App.css
+++ b/src/App.css
@@ -262,14 +262,14 @@ button:hover {
 @media only screen and ( min-width: 750px ) {
  
 
-  .two-collumn {
+  .two-column {
     overflow: visible;
     -webkit-column-count: 2;
     -moz-column-count: 2;
          column-count: 2;
   }
 
- .three-collumn {
+ .three-column {
   overflow: visible;
   -webkit-column-count: 3;
   -moz-column-count: 3;
